# rfnetwork

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python.yml
docs/: conf.py  index.rst  requirements.txt  sg_execution_times.rst  texrequirements.txt
docs/_templates/autosummary/: base.rst  class.rst  module.rst
docs/api/: index.rst
docs/math/: index.rst  pi_attenuator.tex
docs/math/edge_singularity/: edge_singularity.tex
docs/math/noise_wave/: noise_wave.tex
docs/math/pi_attenuator/: pi_attenuator.tex
docs/solver/: edge_singularity.tex
examples/: amplifier_tune.ipynb  bandpass_filter_tuning.py  combiners.ipynb  combiners.py  combline_stripline.py  coupled_lines.py  coupled_stripline.py  coupled_ustrip.py  dipole.py  dp_patch.py  filters.ipynb  filters.py  interactive_tuning.py  msline.py  multi_port_noise_wave.ipynb  noise_ads_comparison.ipynb  noise_ads_comparison.py  noise_figure.py  probes.ipynb  probes.py  vivaldi.py  wilkinson.py  yagi.py
examples/antennas/: dipole.py
examples/data/: ads_noniso.csv  ads_noniso_unb.csv  ads_tune.csv  ads_tune.s2p  ads_wilk_unb.csv  combline_fine_mesh.npy  lab_project-B_Cu.gbr  lab_project-F_Cu.gbr  vivaldi_measured.s2p
examples/data/PD55008E_S_parameter/: PD55008E_1500mA.s2p  PD55008E_150mA.s2p  PD55008E_800mA.s2p
examples/solver_ex/: angled_msline.py  combline_ms.py  combline_parameterized.py  combline_stripline.py  coupled_lines.py  coupled_slines.py  coupler.py  debug_conductors.py  edge_singularity.py  monopole.py  msline.py  msline_axis.py  msline_pml.py  msline_transition.py  msline_y.py  solver_py.py  stripline.py  total_field_monitor.py  wilkinson.py
examples/solver_ex/combline/: combline_ms.py  combline_parameterized.py  combline_striplin_nb.py  combline_stripline_ref_ex.py  combline_stripline_tapped.py  combline_stripline_wb.py  combline_wb.py
examples/solver_ex/edge_singularity/: correction_factors.py  edge_singularity.py  numerical_solution.py
notes/: RELEASE_PROCESS.md
rfnetwork/: __init__.py  component.py  elements.py  filters.py  math.py  netlist.py  network.py  plots.py  solver.py  solver_pcb.py  solver_py.py  touchstone.py  tuning.py  utils.py  utils_mesh.py
rfnetwork/core/: core.py  units.py
rfnetwork/core/inc/: connect.h  postprocess.h  solver.h
rfnetwork/core/src/: connect.cpp  core_binding.cpp  cuda_binding.cpp  postprocess.cpp  solver.cpp  solver.cu
rfnetwork/solver/: debug_coupled_lines.py  debug_line_impedance.py  nonuniform_grid.py  s-parameters.py  solver_SL _PML.py  solver_SL _coupling.py  solver_SL _lines.py  solver_SL _multicell_sub.py  solver_SL _splitter.py  solver_SL.py  solver_yee_grid.py  test_ms_widths.py
rfnetwork/solver/.ipynb_checkpoints/: test_ms_widths-checkpoint.py
rfnetwork/solver/meshing/: debug_mesh.py  (+1 more)
rfnetwork/styles/: __init__.py  default.mplstyle
tests/: test_core.py
tests/data/: QPL9503_5V_with_NP.s2p  TQP3M9018.s2p  TQP3M9038.s2p  ads_lna_nf.csv  ads_wilk_nf.csv  test_bpf.s2p  test_bsf.s2p  test_hpf.s2p  test_lpf.s2p  test_msline.s2p  test_stripline.s2p
tests/test_component/: test_component_snp.py
tests/test_core/: test_cascade_noise.py  test_connect.py  test_connect_self.py
tests/test_elements/: test_attenuator.py  test_filters.py  test_lines.py
tests/test_network/: test_cascade_noise.py  test_noise_network.py
tests/test_solver/: angled_msline.py  test_angled_msline.py  test_axis.py  test_coupled_stripline.py  test_coupled_ustrip.py  test_dipole.py  test_mesh_utils.py  test_microstrip.py
tests/test_utils/: test_utils.py
(+9 files in other folders)
