[build-system]
requires      = ["setuptools >= 77.0.3", "wheel", "numpy >= 2.0.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "rfnetwork"
version = "0.4.2"
description = "rf/microwave network simulation tool"
readme = "README.md"
authors = [{ name = "Rick Lyon", email = "rlyon14@gmail.com" }]
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["rf", "microwave", "network", "fdtd"]
dependencies = [
    "numpy>=2.0.0", 
    "matplotlib", 
    "scipy", 
    "np-struct>=0.0.7", 
    "mpl-markers", 
    "pyside6", 
    "pyvista",
    "imageio",
    "pygerber",
    "scikit-image",
]

[dependency-groups]
dev = [
    "flake8", 
    "pytest", 
    "parameterized", 
    "ipykernel", 
    "trame",
    "trame-vtk",
    "trame-vuetify",
    "texenv",
    "bumpversion",
    "sphinx",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-autodoc-typehints",
    "sphinx-gallery==0.19.0",
    "imageio==2.37.0",
]

[tool.setuptools.packages.find]
include = ["rfnetwork"]

[tool.setuptools]
include-package-data = true

[project.urls]
repository = "https://github.com/ricklyon/rfnetwork"

[tool.bumpversion]
current_version = "0.4.2"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'